--- a/hotels.html
+++ b/hotels.html
@@ -35,13 +35,13 @@
     .modal-header h3{font-size:2.2rem;margin-bottom:10px;}
     .modal-body{flex-grow:1;display:flex;flex-direction:column;}
     .modal-swiper{height:500px;background:#f0f8ff;}
-    .modal-swiper .swiper-slide img{width:100%;height:100%;object-fit:contain;background:#fff;}
+    .modal-swiper .swiper-slide img{width:100%;height:100%;object-fit:contain;}
     .modal-info{padding:30px;text-align:center;background:rgba(255,255,255,0.95);}
     .modal-info p{font-size:1.2rem;line-height:1.7;margin-bottom:20px;}
     .close-modal{position:absolute;top:20px;right:30px;font-size:2.5rem;color:#fff;cursor:pointer;width:50px;height:50px;background:rgba(255,255,255,0.2);border-radius:50%;display:flex;align-items:center;justify-content:center;transition:.3s;}
     .close-modal:hover{background:rgba(255,140,0,0.8);}
     footer{text-align:center;padding:60px 20px;background:#e0ffff;color:#006666;font-size:0.95rem;}
-    @media(max-width:768px){.grid{grid-template-columns:1fr}.modal-swiper{height:300px;}.modal-header h3{font-size:1.8rem;}}
+    @media(max-width:768px){.grid{grid-template-columns:1fr}.modal-swiper{height:300px;}}
   </style>
 </head>
 <body>
@@ -55,7 +55,7 @@
 
     <!-- Карточка Ton Marina -->
     <div class="hotel-card" onclick="openModal()">
-      <img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-1.jpg" alt="Ton Marina Apart-Hotel" loading="lazy">
+      <img src="images/ton-marina/Ton-Marina-1.jpg" alt="Ton Marina Apart-Hotel" loading="lazy">
       <div class="info">
         <h3>Ton Marina Apart-Hotel</h3>
         <p>Село Тон • Современные апартаменты с кухней<br>Собственный пирс • Прямой вид на озеро</p>
@@ -64,9 +64,9 @@
       </div>
     </div>
 
-    <!-- Другие отели (пример) -->
+    <!-- Пример другой карточки -->
     <div class="hotel-card">
-      <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/10/5f/21/3c/bel-tam-seaside-yurt.jpg?w=700&h=-1&s=1" alt="Bel Tam">
+      <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/10/5f/21/3c/bel-tam-seaside-yurt.jpg?w=700&h=-1&s=1" alt="Bel Tam Seaside Yurt Camp">
       <div class="info">
         <h3>Bel Tam Seaside Yurt Camp</h3>
         <p>Юрточный лагерь • Прямо на пляже • Аутентично • Закаты</p>
@@ -78,7 +78,7 @@
   </div>
 </div>
 
-<!-- Модальное окно Ton Marina -->
+<!-- Модальное окно с 28 фото -->
 <div class="modal" id="tonMarinaModal">
   <div class="close-modal" onclick="closeModal()">×</div>
   <div class="modal-content">
@@ -89,34 +89,34 @@
     <div class="modal-body">
       <div class="swiper modal-swiper mySwiper">
         <div class="swiper-wrapper">
-          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-1.jpg" alt="1" loading="lazy"></div>
-          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-2.jpg" alt="2" loading="lazy"></div>
-          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-3.jpg" alt="3" loading="lazy"></div>
-          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-4.jpg" alt="4" loading="lazy"></div>
-          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-5.jpg" alt="5" loading="lazy"></div>
-          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-6.jpg" alt="6" loading="lazy"></div>
-          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-7.jpg" alt="7" loading="lazy"></div>
-          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-8.jpg" alt="8" loading="lazy"></div>
-          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-9.jpg" alt="9" loading="lazy"></div>
-          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-10.jpg" alt="10" loading="lazy"></div>
-          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-11.jpg" alt="11" loading="lazy"></div>
-          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-12.jpg" alt="12" loading="lazy"></div>
-          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-13.jpg" alt="13" loading="lazy"></div>
-          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-14.jpg" alt="14" loading="lazy"></div>
-          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-15.jpg" alt="15" loading="lazy"></div>
-          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-16.jpg" alt="16" loading="lazy"></div>
-          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-17.jpg" alt="17" loading="lazy"></div>
-          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-18.jpg" alt="18" loading="lazy"></div>
-          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-19.jpg" alt="19" loading="lazy"></div>
-          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-20.jpg" alt="20" loading="lazy"></div>
-          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-21.jpg" alt="21" loading="lazy"></div>
-          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-22.jpg" alt="22" loading="lazy"></div>
-          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-23.jpg" alt="23" loading="lazy"></div>
-          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-24.jpg" alt="24" loading="lazy"></div>
-          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-25.jpg" alt="25" loading="lazy"></div>
-          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-26.jpg" alt="26" loading="lazy"></div>
-          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-27.jpg" alt="27" loading="lazy"></div>
-          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-28.jpg" alt="28" loading="lazy"></div>
+          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-1.jpg" alt="1" loading="lazy"></div>
+          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-2.jpg" alt="2" loading="lazy"></div>
+          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-3.jpg" alt="3" loading="lazy"></div>
+          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-4.jpg" alt="4" loading="lazy"></div>
+          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-5.jpg" alt="5" loading="lazy"></div>
+          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-6.jpg" alt="6" loading="lazy"></div>
+          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-7.jpg" alt="7" loading="lazy"></div>
+          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-8.jpg" alt="8" loading="lazy"></div>
+          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-9.jpg" alt="9" loading="lazy"></div>
+          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-10.jpg" alt="10" loading="lazy"></div>
+          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-11.jpg" alt="11" loading="lazy"></div>
+          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-12.jpg" alt="12" loading="lazy"></div>
+          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-13.jpg" alt="13" loading="lazy"></div>
+          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-14.jpg" alt="14" loading="lazy"></div>
+          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-15.jpg" alt="15" loading="lazy"></div>
+          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-16.jpg" alt="16" loading="lazy"></div>
+          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-17.jpg" alt="17" loading="lazy"></div>
+          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-18.jpg" alt="18" loading="lazy"></div>
+          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-19.jpg" alt="19" loading="lazy"></div>
+          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-20.jpg" alt="20" loading="lazy"></div>
+          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-21.jpg" alt="21" loading="lazy"></div>
+          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-22.jpg" alt="22" loading="lazy"></div>
+          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-23.jpg" alt="23" loading="lazy"></div>
+          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-24.jpg" alt="24" loading="lazy"></div>
+          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-25.jpg" alt="25" loading="lazy"></div>
+          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-26.jpg" alt="26" loading="lazy"></div>
+          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-27.jpg" alt="27" loading="lazy"></div>
+          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-28.jpg" alt="28" loading="lazy"></div>
         </div>
         <div class="swiper-pagination"></div>
       </div>
