--- a/hotels.html
+++ b/hotels.html
@@ -55,7 +55,7 @@
 
     <!-- Карточка Ton Marina -->
     <div class="hotel-card" onclick="openModal()">
-      <img src="images/ton-marina/Ton-Marina-1.jpg" alt="Ton Marina Apart-Hotel" loading="lazy">
+      <img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-1.jpg" alt="Ton Marina Apart-Hotel" loading="lazy">
       <div class="info">
         <h3>Ton Marina Apart-Hotel</h3>
         <p>Село Тон • Современные апартаменты с кухней<br>Собственный пирс • Прямой вид на озеро</p>
@@ -64,7 +64,7 @@
       </div>
     </div>
 
-    <!-- Пример другой карточки -->
+    <!-- Другие отели -->
     <div class="hotel-card">
       <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/10/5f/21/3c/bel-tam-seaside-yurt.jpg?w=700&h=-1&s=1" alt="Bel Tam Seaside Yurt Camp">
       <div class="info">
@@ -89,34 +89,34 @@
     <div class="modal-body">
       <div class="swiper modal-swiper mySwiper">
         <div class="swiper-wrapper">
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-1.jpg" alt="1" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-2.jpg" alt="2" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-3.jpg" alt="3" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-4.jpg" alt="4" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-5.jpg" alt="5" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-6.jpg" alt="6" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-7.jpg" alt="7" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-8.jpg" alt="8" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-9.jpg" alt="9" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-10.jpg" alt="10" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-11.jpg" alt="11" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-12.jpg" alt="12" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-13.jpg" alt="13" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-14.jpg" alt="14" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-15.jpg" alt="15" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-16.jpg" alt="16" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-17.jpg" alt="17" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-18.jpg" alt="18" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-19.jpg" alt="19" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-20.jpg" alt="20" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-21.jpg" alt="21" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-22.jpg" alt="22" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-23.jpg" alt="23" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-24.jpg" alt="24" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-25.jpg" alt="25" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-26.jpg" alt="26" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-27.jpg" alt="27" loading="lazy"></div>
-          <div class="swiper-slide"><img src="images/ton-marina/Ton-Marina-28.jpg" alt="28" loading="lazy"></div>
+          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-1.jpg" alt="1" loading="lazy"></div>
+          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-2.jpg" alt="2" loading="lazy"></div>
+          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-3.jpg" alt="3" loading="lazy"></div>
+          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-4.jpg" alt="4" loading="lazy"></div>
+          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-5.jpg" alt="5" loading="lazy"></div>
+          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-6.jpg" alt="6" loading="lazy"></div>
+          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-7.jpg" alt="7" loading="lazy"></div>
+          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-8.jpg" alt="8" loading="lazy"></div>
+          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-9.jpg" alt="9" loading="lazy"></div>
+          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-10.jpg" alt="10" loading="lazy"></div>
+          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-11.jpg" alt="11" loading="lazy"></div>
+          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-12.jpg" alt="12" loading="lazy"></div>
+          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-13.jpg" alt="13" loading="lazy"></div>
+          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-14.jpg" alt="14" loading="lazy"></div>
+          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-15.jpg" alt="15" loading="lazy"></div>
+          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-16.jpg" alt="16" loading="lazy"></div>
+          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-17.jpg" alt="17" loading="lazy"></div>
+          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-18.jpg" alt="18" loading="lazy"></div>
+          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-19.jpg" alt="19" loading="lazy"></div>
+          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-20.jpg" alt="20" loading="lazy"></div>
+          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-21.jpg" alt="21" loading="lazy"></div>
+          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-22.jpg" alt="22" loading="lazy"></div>
+          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-23.jpg" alt="23" loading="lazy"></div>
+          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-24.jpg" alt="24" loading="lazy"></div>
+          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-25.jpg" alt="25" loading="lazy"></div>
+          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-26.jpg" alt="26" loading="lazy"></div>
+          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-27.jpg" alt="27" loading="lazy"></div>
+          <div class="swiper-slide"><img src="/TravelKyrgyzstan/images/ton-marina/Ton-Marina-28.jpg" alt="28" loading="lazy"></div>
         </div>
         <div class="swiper-pagination"></div>
       </div>
